Using interface method from java 8 instead of java 9