@@ -36,6 +36,7 @@ import javax.inject.Inject;
 import io.lettuce.core.cluster.ClusterReadOnlyCommands;
 import io.lettuce.core.protocol.ProtocolKeyword;
 import io.lettuce.test.condition.RedisConditions;
+import org.assertj.core.util.Arrays;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -614,7 +615,7 @@ public class ServerCommandIntegrationTests extends TestSupport {
             throw new IllegalArgumentException("Command not found: " + commandName);
         }
 
-        List<CommandDetail> details = CommandDetailParser.parse(List.of(commandInfo));
+        List<CommandDetail> details = CommandDetailParser.parse(Arrays.asList(commandInfo));
         if (details.isEmpty()) {
             throw new IllegalArgumentException("Command details could not be parsed: " + commandName);
         }
